CommentWebController, ValidateServicc